docs/2.0/_sources/api/gammapy.estimators.FluxMaps.rst.txt
FluxMaps
========

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxMaps
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxMaps.acceptance_off
      ~FluxMaps.acceptance_on
      ~FluxMaps.alpha
      ~FluxMaps.available_quantities
      ~FluxMaps.counts
      ~FluxMaps.dnde
      ~FluxMaps.dnde_err
      ~FluxMaps.dnde_errn
      ~FluxMaps.dnde_errp
      ~FluxMaps.dnde_ref
      ~FluxMaps.dnde_scan_values
      ~FluxMaps.dnde_ul
      ~FluxMaps.e2dnde
      ~FluxMaps.e2dnde_err
      ~FluxMaps.e2dnde_errn
      ~FluxMaps.e2dnde_errp
      ~FluxMaps.e2dnde_ref
      ~FluxMaps.e2dnde_ul
      ~FluxMaps.eflux
      ~FluxMaps.eflux_err
      ~FluxMaps.eflux_errn
      ~FluxMaps.eflux_errp
      ~FluxMaps.eflux_ref
      ~FluxMaps.eflux_ul
      ~FluxMaps.energy_axis
      ~FluxMaps.energy_max
      ~FluxMaps.energy_min
      ~FluxMaps.energy_ref
      ~FluxMaps.filter_success_nan
      ~FluxMaps.flux
      ~FluxMaps.flux_err
      ~FluxMaps.flux_errn
      ~FluxMaps.flux_errp
      ~FluxMaps.flux_ref
      ~FluxMaps.flux_sensitivity
      ~FluxMaps.flux_ul
      ~FluxMaps.geom
      ~FluxMaps.has_any_ts
      ~FluxMaps.has_stat_profiles
      ~FluxMaps.has_success
      ~FluxMaps.has_ul
      ~FluxMaps.is_convertible_to_flux_sed_type
      ~FluxMaps.is_ul
      ~FluxMaps.n_dof
      ~FluxMaps.n_sigma
      ~FluxMaps.n_sigma_ul
      ~FluxMaps.niter
      ~FluxMaps.norm
      ~FluxMaps.norm_err
      ~FluxMaps.norm_errn
      ~FluxMaps.norm_errp
      ~FluxMaps.norm_sensitivity
      ~FluxMaps.norm_ul
      ~FluxMaps.npred
      ~FluxMaps.npred_background
      ~FluxMaps.npred_excess
      ~FluxMaps.npred_excess_err
      ~FluxMaps.npred_excess_errn
      ~FluxMaps.npred_excess_errp
      ~FluxMaps.npred_excess_ref
      ~FluxMaps.npred_excess_ul
      ~FluxMaps.reference_model
      ~FluxMaps.reference_model_default
      ~FluxMaps.reference_spectral_model
      ~FluxMaps.sed_type_init
      ~FluxMaps.sed_type_plot_default
      ~FluxMaps.sqrt_ts
      ~FluxMaps.sqrt_ts_threshold_ul
      ~FluxMaps.stat
      ~FluxMaps.stat_null
      ~FluxMaps.stat_scan
      ~FluxMaps.success
      ~FluxMaps.ts
      ~FluxMaps.ts_scan

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxMaps.all_quantities
      ~FluxMaps.copy
      ~FluxMaps.from_hdulist
      ~FluxMaps.from_maps
      ~FluxMaps.from_stack
      ~FluxMaps.get_flux_points
      ~FluxMaps.iter_by_axis
      ~FluxMaps.read
      ~FluxMaps.slice_by_coord
      ~FluxMaps.slice_by_energy
      ~FluxMaps.slice_by_idx
      ~FluxMaps.slice_by_time
      ~FluxMaps.to_hdulist
      ~FluxMaps.to_maps
      ~FluxMaps.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: acceptance_off
   .. autoattribute:: acceptance_on
   .. autoattribute:: alpha
   .. autoattribute:: available_quantities
   .. autoattribute:: counts
   .. autoattribute:: dnde
   .. autoattribute:: dnde_err
   .. autoattribute:: dnde_errn
   .. autoattribute:: dnde_errp
   .. autoattribute:: dnde_ref
   .. autoattribute:: dnde_scan_values
   .. autoattribute:: dnde_ul
   .. autoattribute:: e2dnde
   .. autoattribute:: e2dnde_err
   .. autoattribute:: e2dnde_errn
   .. autoattribute:: e2dnde_errp
   .. autoattribute:: e2dnde_ref
   .. autoattribute:: e2dnde_ul
   .. autoattribute:: eflux
   .. autoattribute:: eflux_err
   .. autoattribute:: eflux_errn
   .. autoattribute:: eflux_errp
   .. autoattribute:: eflux_ref
   .. autoattribute:: eflux_ul
   .. autoattribute:: energy_axis
   .. autoattribute:: energy_max
   .. autoattribute:: energy_min
   .. autoattribute:: energy_ref
   .. autoattribute:: filter_success_nan
   .. autoattribute:: flux
   .. autoattribute:: flux_err
   .. autoattribute:: flux_errn
   .. autoattribute:: flux_errp
   .. autoattribute:: flux_ref
   .. autoattribute:: flux_sensitivity
   .. autoattribute:: flux_ul
   .. autoattribute:: geom
   .. autoattribute:: has_any_ts
   .. autoattribute:: has_stat_profiles
   .. autoattribute:: has_success
   .. autoattribute:: has_ul
   .. autoattribute:: is_convertible_to_flux_sed_type
   .. autoattribute:: is_ul
   .. autoattribute:: n_dof
   .. autoattribute:: n_sigma
   .. autoattribute:: n_sigma_ul
   .. autoattribute:: niter
   .. autoattribute:: norm
   .. autoattribute:: norm_err
   .. autoattribute:: norm_errn
   .. autoattribute:: norm_errp
   .. autoattribute:: norm_sensitivity
   .. autoattribute:: norm_ul
   .. autoattribute:: npred
   .. autoattribute:: npred_background
   .. autoattribute:: npred_excess
   .. autoattribute:: npred_excess_err
   .. autoattribute:: npred_excess_errn
   .. autoattribute:: npred_excess_errp
   .. autoattribute:: npred_excess_ref
   .. autoattribute:: npred_excess_ul
   .. autoattribute:: reference_model
   .. autoattribute:: reference_model_default
   .. autoattribute:: reference_spectral_model
   .. autoattribute:: sed_type_init
   .. autoattribute:: sed_type_plot_default
   .. autoattribute:: sqrt_ts
   .. autoattribute:: sqrt_ts_threshold_ul
   .. autoattribute:: stat
   .. autoattribute:: stat_null
   .. autoattribute:: stat_scan
   .. autoattribute:: success
   .. autoattribute:: ts
   .. autoattribute:: ts_scan

   .. rubric:: Methods Documentation

   .. automethod:: all_quantities
   .. automethod:: copy
   .. automethod:: from_hdulist
   .. automethod:: from_maps
   .. automethod:: from_stack
   .. automethod:: get_flux_points
   .. automethod:: iter_by_axis
   .. automethod:: read
   .. automethod:: slice_by_coord
   .. automethod:: slice_by_energy
   .. automethod:: slice_by_idx
   .. automethod:: slice_by_time
   .. automethod:: to_hdulist
   .. automethod:: to_maps
   .. automethod:: write
